--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "mobx-react": "^6.1.3",
     "mobx-react-lite": "^3.1.6",
     "mobx-react-router": "^4.1.0",
+    "moment": "^2.29.1",
+    "rc-field-form": "^1.21.1",
     "react": "^17.0.2",
+    "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
