--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "honeypoint.react",
   "version": "0.1.0",
   "private": true,
+  "author": "ek.son",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,6 +19,7 @@
     "mobx-react-router": "^4.1.0",
     "moment": "^2.29.1",
     "rc-field-form": "^1.21.1",
+    "rc-tween-one": "^2.7.3",
     "react": "^17.0.2",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
