--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-slick": "^0.23.5",
     "antd": "^4.16.7",
     "axios": "^0.21.1",
     "mobx": "^5.13.0",
@@ -18,6 +19,7 @@
     "mobx-react-lite": "^3.1.6",
     "mobx-react-router": "^4.1.0",
     "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "rc-field-form": "^1.21.1",
     "rc-tween-one": "^2.7.3",
     "react": "^17.0.2",
@@ -25,8 +27,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
