--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-slick": "^0.23.5",
     "antd": "^4.16.7",
     "axios": "^0.21.1",
@@ -25,6 +26,7 @@
     "react": "^17.0.2",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
