--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-slick": "^0.23.5",
+    "@types/uuid": "^8.3.1",
     "antd": "^4.16.7",
     "axios": "^0.21.1",
     "mobx": "^6.3.3",
@@ -29,17 +30,18 @@
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "react-scripts build; rm build/honeypoint.zip; zip -r build/honeypoint.zip build; scp -i ~/.ssh/ek-key.pem build/honeypoint.zip ubuntu@3.34.194.170:~/honeypoint.zip;",    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8081/",
